# autocast

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  README.md  compare_processed_datasets.sh  debug_masked.sh  download_osisaf.sh  download_osisaf_full.sh  download_osisaf_iceconc_only.py  download_osisaf_opendap.py  evaluation_metrics.csv  fill_nan_osisaf.sh  fill_nan_simple.sh  fill_nan_v2.sh  inspect_datasets.sh  inspect_filled.sh  inspect_osisaf.sh  inspect_raw_multiyr.sh  investigate_structure.sh  pyproject.toml  resolved_eval_config.yaml  restructure_osisaf.sh  run_climatology.sh  run_download_opendap.sh  test_baseline.sh  test_config.sh  train_masked.sh  wrap_osisaf_data.sh
.github/workflows/: ci.yaml  release.yaml
Qien_Code/: download_raw_osisaf.py  eval_epd_masked.sh  get_osisaf_data.py  run_osisaf_download.sh  train_epd_osisaf_masked.sh
configs/: ae_adm.yaml  ae_rd.yaml  autoencoder.yaml  config.yaml  encoder_processor_decoder.yaml  epd_ad.yaml  epd_rd.yaml  processor.yaml
configs/backbone/: unet.yaml  unet_large.yaml  vit.yaml  vit_small.yaml  vit_small_no_global_cond.yaml
configs/data/: advection_diffusion_multichannel.yaml  advection_diffusion_singlechannel.yaml  from_disk.yaml  miniwell.yaml  reaction_diffusion.yaml  the_well.yaml
configs/datamodule/: advection_diffusion_multichannel.yaml  advection_diffusion_singlechannel.yaml  miniwell.yaml  osisaf_nh_sic.yaml  reaction_diffusion.yaml  the_well.yaml
configs/decoder/: channels_last.yaml  dc.yaml  dc_deep.yaml  dc_deep_256_v2.yaml  lola_decoder.yaml
configs/encoder/: dc.yaml  dc_deep.yaml  dc_f32c64_small.yaml  identity.yaml  (+2 more)
docs/: DEVELOPER_GUIDE.md  SCRIPTS_AND_CONFIGS.md
exploratory/: test_diffusion.ipynb
notebooks/: 00_01_exploration_diffusion_reaction.ipynb  00_exploration.ipynb  00_quickstart.ipynb  01_encoder_decoder.ipynb  02_diffusion.ipynb  03_diffusion_reaction_test.ipynb  04_e2e.ipynb  05_ViT.ipynb  06_00_processor_train.ipynb  06_01_processor_eval_latent.ipynb  06_02_processor_eval_ambient.ipynb  06_processor.ipynb  06_processor_load.ipynb  07_ViT_ensemble.ipynb  08_collating_multiple_results.ipynb
random_slurm_job_scripts/: check_nc_dimensions.sh  create_subset.sh  diagnose_transpose.sh  download_osisaf_full.sh  plot_mask.sh  plot_mask_transpose.sh  transpose_mask.sh
run_manifests/: example_runs.txt
scripts/: ae.sh  cli_equivalents.sh  create_and_transpose_mask.sh  create_mask_from_2020.sh  create_seaice_mask.py  encoder-processor-decoder-parameter_sweep.sh  epd.sh  epd_eval_slurm_one_liner.sh  epd_eval_slurm_one_liner_fast.sh  epd_eval_slurm_one_liner_full.sh  eval.sh  launch_from_manifest.sh  parameter_sweep.sh  process_osisaf_full.py  processor.sh  regenerate_mask_2020.sh  run_eval.sh  run_process_osisaf_full.sh  train_and_eval_autoencoder.sh  train_and_eval_encoder-processor-decoder.sh  train_processor.sh
slurm_scripts/: train_and_eval_autoencoder_64_64_dc_deep_256_v2_no_norm.sh  train_and_eval_epd_crps_fno_additive.sh  train_and_eval_epd_diffusion_flow_matching_200.sh
slurm_templates/: create_seaice_mask.sh  encoder-processor-decoder-parameter_sweep.sh  train_and_eval_autoencoder.sh  train_and_eval_encoder-processor-decoder.sh  train_processor.sh
tests/: conftest.py  test_config.py  test_imports.py
(+285 files in other folders)
