[project]
name = "autocast"
version = "0.0.1"
description = "Spatiotemporal forecasting"
readme = "README.md"
authors = [
    { name = "AI for Physical Systems Team at The Alan Turing Institute", email = "ai4physics@turing.ac.uk" },
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "autoemulate>=1.2.0",
    "azula>=0.7.0",
    "beartype>=0.22.8",
    "einops>=0.8.1",
    "hydra-core>=1.3.2",
    "h5py>=3.15.1",
    "jaxtyping>=0.3.3",
    "lightning>=2.5.6",
    "neuraloperator>=2.0.0",
    "the-well>=1.1.0",
    "timm>=0.9",
    "torch>=2.9.1",
    "wandb>=0.18.7",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff==0.14.4",
    "pyright==1.1.407",
    "pre-commit>=4.4.0",
]

[project.scripts]
autocast = "autocast:main"
train_encoder_processor_decoder = "autocast.train.encoder_processor_decoder:main"
train_autoencoder = "autocast.train.autoencoder:main"
evaluate_encoder_processor_decoder = "autocast.eval.encoder_processor_decoder:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "D",   # docstring conventions
    "E",
    "F",
    "W",   # flake8
    "B",   # flake8-bugbear
    "I",   # isort
    "ARG", # flake8-unused-arguments
    "C4",  # flake8-comprehensions
    "EM",  # flake8-errmsg
    "ICN", # flake8-import-conventions
    "ISC", # flake8-implicit-str-concat
    "G",   # flake8-logging-format
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PL",  # pylint
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "RUF", # Ruff-specific
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "YTT", # flake8-2020
    "EXE", # flake8-executable
]

ignore = [
    "PLR2004", # Magic value used in comparison
    "EM102",   # Exception must not use an f-string literal, assign to variable first
    "ISC001",  # Conflicts with formatter
    # "D417",    # Missing trailing new line in docstring
    "D100",    # Missing docstring in public module
    "D102",    # Missing docstring in public class, TODO: remove in future
    "D104",    # Missing docstring in public package
    "PLR0913", # too many arguments
    "RET504",  # Allow assignment to variable before return
]

unfixable = [
    "F401", # Would remove unused imports
    "F841", # Would remove unused variables
]
flake8-unused-arguments.ignore-variadic-names = true # allow unused *args/**kwargs

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D"]

[tool.uv.sources]
autoemulate = { git = "https://github.com/alan-turing-institute/autoemulate.git" }

[tool.pytest.ini_options]
filterwarnings = [
    # Ignore Lightning warnings that are expected/benign in test environment
    "ignore:You are trying to `self.log\\(\\)` but the `self.trainer` reference is not registered:UserWarning",
    "ignore:GPU available but not used:UserWarning",
    "ignore:The '.*_dataloader' does not have many workers:UserWarning",
]
